fixed problems with responsive home page 404 and about are functionnal on mobile

--- a/p8-lucg-reactapp/src/assets/styles/base/404.scss
+++ b/p8-lucg-reactapp/src/assets/styles/base/404.scss
@@ -33,6 +33,8 @@
 
 .errorpageparent {
   position: relative;
+  display: flex;
+  flex-direction: column;
   height: 100%;
 }
 
