--- a/p8-lucg-reactapp/src/assets/styles/base/about.scss
+++ b/p8-lucg-reactapp/src/assets/styles/base/about.scss
@@ -1,13 +1,25 @@
-.aboutpicturebanner{
-    background-image: url("../../images/aboutbanner.png");
-    background-size:cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 90%;
-    height: 200px;
-    margin-left: 5%;
-    padding-left: 1%;
-    padding-right: 1%;
-    border-radius: 15px;
-    margin-bottom: 35px;
+.aboutpicturebanner {
+  background-image: url("../../images/aboutbanner.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 90%;
+  height: 200px;
+  margin-left: 5%;
+  padding-left: 1%;
+  padding-right: 1%;
+  border-radius: 15px;
+  margin-bottom: 35px;
+  min-height: 200px;
+}
+
+.AboutParent {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.collapsecontainer {
+  display: flex;
+  flex-direction: column;
 }
