--- a/p8-lucg-reactapp/src/assets/styles/base/home.scss
+++ b/p8-lucg-reactapp/src/assets/styles/base/home.scss
@@ -70,7 +70,7 @@
   .lodgingcardscontainer {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 200px;
+    margin-bottom: 20px;
     background-color: white;
   }
 }
