--- a/p8-lucg-reactapp/src/assets/styles/components/collapse.scss
+++ b/p8-lucg-reactapp/src/assets/styles/components/collapse.scss
@@ -1,3 +1,7 @@
+.collapseparent {
+  display: flex;
+  flex-direction: column;
+}
 .collapse {
   position: relative;
   z-index: 1;
@@ -29,6 +33,8 @@
   rotate: -180deg;
 }
 .collapsecontent {
+  display: flex;
+  flex-direction: column;
   z-index: 0;
   background-color: #f6f6f6;
   width: 70%;
@@ -57,4 +63,12 @@
 
 .description.open {
   height: 160px; /* Hauteur souhaitée pour la description */
+}
+
+@media screen and (max-width: 600px) {
+  .collapse {
+    width: 87%;
+    padding-left: 3%;
+    margin-left: 5%;
+  }
 }
