--- a/p8-lucg-reactapp/src/assets/styles/components/lodging_card.scss
+++ b/p8-lucg-reactapp/src/assets/styles/components/lodging_card.scss
@@ -34,7 +34,7 @@
   left: 0;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 600px) {
   .lodgingcard {
     width: calc(100%);
     height: 240px;
